# free-sdk

./: README.md  pyproject.toml
free_dot_ai.egg-info/: PKG-INFO  SOURCES.txt
freeai/: __init__.py  client.py  exceptions.py  models.py  webhooks.py
