[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-dot-ai"
version = "0.1.0"
description = "Free.ai Python SDK — access 400+ AI tools from your code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Free.ai", email = "hello@free.ai"}]
keywords = ["ai", "llm", "chatgpt", "claude", "gemini", "tts", "stt", "image-generation", "free"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://free.ai"
Documentation = "https://free.ai/api/"
Repository = "https://github.com/freeaigit/free-sdk"
Issues = "https://github.com/freeaigit/free-sdk/issues"

[tool.setuptools.packages.find]
include = ["freeai*"]
